force-app/main/default/objects/Account/fields/Faculty_Size__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Size__c</fullName>
    <description>Total faculty / teaching staff count.</description>
    <label>Faculty Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>