force-app/main/default/objects/Account/fields/Geocode_Status__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Status__c</fullName>
    <description>Outcome of the last geocoding attempt: Success, No Address, No Result, or Error.</description>
    <label>Geocode Status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>