force-app/main/default/objects/Account/fields/Geocoded_On__c.field-meta.xml
<CustomField>
    <fullName>Geocoded_On__c</fullName>
    <description>Timestamp of the last geocoding attempt for this account.</description>
    <label>Geocoded On</label>
    <type>DateTime</type>
</CustomField>