force-app/main/default/objects/Account/fields/Grades_Served__c.field-meta.xml
<CustomField>
    <fullName>Grades_Served__c</fullName>
    <description>Grades taught at this school (e.g. 9-12, K-5).</description>
    <label>Grades Served</label>
    <length>50</length>
    <type>Text</type>
</CustomField>