force-app/main/default/objects/Account/fields/NCES_ID__c.field-meta.xml
<CustomField>
    <fullName>NCES_ID__c</fullName>
    <description>National Center for Education Statistics (NCES) ID number.</description>
    <label>NCES ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>