force-app/main/default/objects/Account/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <description>Type of school entity (e.g. High School, Middle School, etc.)</description>
    <label>School Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>K-8</fullName>
            </value>
            <value>
                <fullName>Charter School</fullName>
            </value>
            <value>
                <fullName>Alternative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>