force-app/main/default/objects/Account/fields/Student_Population__c.field-meta.xml
<CustomField>
    <fullName>Student_Population__c</fullName>
    <description>Total student body count.</description>
    <label>Student Population</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>