force-app/main/default/objects/Account/recordTypes/JPA.recordType-meta.xml
<RecordType>
    <fullName>JPA</fullName>
    <active>true</active>
    <description>Account record type representing a Joint Powers Authority entity.</description>
    <label>JPA</label>
</RecordType>