force-app/main/default/objects/Account/recordTypes/School.recordType-meta.xml
<RecordType>
    <fullName>School</fullName>
    <active>true</active>
    <description>Account record type representing a School entity.</description>
    <label>School</label>
</RecordType>