force-app/main/default/objects/Account/recordTypes/State_Entity.recordType-meta.xml
<RecordType>
    <fullName>State_Entity</fullName>
    <active>true</active>
    <description>Account record type representing a State Entity.</description>
    <label>State Entity</label>
</RecordType>